--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
     "sweetalert2": "^11.17.2",
+    "tailwindcss": "^4.1.3",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
